fix attr prefix in search query, fix dropdown overflow

--- a/app/assets/stylesheets/slash_admin/application.scss
+++ b/app/assets/stylesheets/slash_admin/application.scss
@@ -449,12 +449,10 @@ i {
 
   .dropdown {
     .dropdown-menu {
-      width: 195px;
       padding: 0;
       border-radius: 0;
       box-shadow: 5px 5px rgba(102, 102, 102, 0.1);
       border: 1px solid #eee;
-      right: 0;
       margin-top: -6px;
       left: initial;
 
